Added frontpage, project outline, fixed lidar chapter, fixed method chapter, discussion on the way, started introduction

--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -28,7 +28,21 @@ $\\[0.5cm]$
    FPGA & = & Field Programmable Gate Array
 \end{tabular}
 \end{center}
+\clearpage
+\section*{{\Huge Notation}}
+\addcontentsline{toc}{chapter}{Notation}
+$\\[0.5cm]$
 
+\noindent 
+\begin{center}
+	\begin{tabular}{ l c l }
+		$\mathcal{R}_a^b$ & = & Rotation matrix from coordinate systems $a$ to $b$\\
+		$\overrightarrow{OP}$ & = & Coordinate-free vector from point $O$ to point $P$\\
+		$\mathbf{M}$ & = & A matrix\\
+		$\mathbf{p}^a$ & = & A coordinate vector, $\mathbf{p}$ decomposed in the $a$ coordinate frame\\
+		$t_{ab}^a$ & = & A translation vector from frame $b$ to frame $a$, decomposed in frame $a$
+	\end{tabular}
+\end{center}
 \cleardoublepage
 
 \pagestyle{fancy}
