--- a/main.tex
+++ b/main.tex
@@ -10,6 +10,8 @@
 
 %% PART 1
 %%The title page will be automatically generated and added by the DAIM system
+\input{frontpage.tex}
+\input{problemdescription.tex}
 \input{dedication.tex}		%% Optional
 
 %% PART 2
