--- a/mylib.bib
+++ b/mylib.bib
@@ -232,6 +232,21 @@ isbn = {},
   note = {Accessed: 2017-12-06},
 }
 
+@misc{caffe,
+	title = {Caffe Deep Learning Framework, Online Documentation},
+	author = {},
+	howpublished = {\url{http://caffe.berkeleyvision.org/}},
+	note = {Accessed: 2017-12-17},
+}
+
+@misc{caffe_for_faster_rcnn,
+	title = {Caffe for Faster R-CNN},
+	author = {},
+	howpublished = {\url{https://github.com/ShaoqingRen/caffe/tree/faster-R-CNN}},
+	note = {Accessed: 2017-12-17},
+}
+
+
 @misc{camera_calibrator,
 	title = {Estimate geometric parameters of a single camera - MATLAB},
 	author = {MathWorks},
@@ -246,6 +261,12 @@ isbn = {},
   note = {Accessed: 2017-12-06},
 }
 
+@misc{ros_msgs,
+	title = {ROS Tutorials: Creating a ROS msg and srv},
+	howpublished = {\url{http://wiki.ros.org/ROS/Tutorials/CreatingMsgAndSrv}},
+	note = {Accessed: 2017-12-18},
+}
+
 @misc{faster_rcnn_git,
 	title = {Faster R-CNN: Towards Real-Time Object Detection with Region Proposal Networks},
 	howpublished = {\url{https://github.com/ShaoqingRen/faster_rcnn}},
@@ -253,7 +274,7 @@ isbn = {},
 }
 
 @article{ren15fasterrcnn,
-	Author = {Shaoqing Ren, Kaiming He, Ross Girshick, Jian Sun},
+	Author = {Shaoqing Ren and Kaiming He and Ross Girshick and Jian Sun},
 	Title = {{Faster R-CNN}: Towards Real-Time Object Detection with Region Proposal Networks},
 	Journal = {arXiv preprint arXiv:1506.01497},
 	Year = {2015}
@@ -293,10 +314,83 @@ Author = {Olga Russakovsky and Jia Deng and Hao Su and Jonathan Krause and Sanje
 Title = {{ImageNet Large Scale Visual Recognition Challenge}},
 Year = {2015},
 journal   = {International Journal of Computer Vision (IJCV)},
-doi = {10.1007/s11263-015-0816-y},
 volume={115},
 number={3},
 pages={211-252}
+}
+
+@article{DBLP:journals/corr/ZeilerF13,
+	author    = {Matthew D. Zeiler and
+	Rob Fergus},
+	title     = {Visualizing and Understanding Convolutional Networks},
+	journal   = {CoRR},
+	volume    = {abs/1311.2901},
+	year      = {2013},
+	url       = {http://arxiv.org/abs/1311.2901},
+	archivePrefix = {arXiv},
+	eprint    = {1311.2901},
+	timestamp = {Wed, 07 Jun 2017 14:40:45 +0200},
+	biburl    = {http://dblp.org/rec/bib/journals/corr/ZeilerF13},
+	bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{SCHMIDHUBER201585,
+	title = "Deep learning in neural networks: An overview",
+	journal = "Neural Networks",
+	volume = "61",
+	number = "Supplement C",
+	pages = "85 - 117",
+	year = "2015",
+	issn = "0893-6080",
+	doi = "https://doi.org/10.1016/j.neunet.2014.09.003",
+	url = "http://www.sciencedirect.com/science/article/pii/S0893608014002135",
+	author = "Jürgen Schmidhuber",
+}
+
+@article{VGG16,
+	author    = {Karen Simonyan and
+	Andrew Zisserman},
+	title     = {Very Deep Convolutional Networks for Large-Scale Image Recognition},
+	journal   = {CoRR},
+	volume    = {abs/1409.1556},
+	year      = {2014},
+	url       = {http://arxiv.org/abs/1409.1556},
+	archivePrefix = {arXiv},
+	eprint    = {1409.1556},
+	timestamp = {Wed, 07 Jun 2017 14:41:51 +0200},
+	biburl    = {http://dblp.org/rec/bib/journals/corr/SimonyanZ14a},
+	bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@book{Goodfellow-et-al-2016,
+	title={Deep Learning},
+	author={Ian Goodfellow and Yoshua Bengio and Aaron Courville},
+	publisher={MIT Press},
+	note={\url{http://www.deeplearningbook.org}},
+	year={2016}
+}
+
+@inproceedings{GlennieVLP,
+	author={Glennie,C. L. and Kusari,A. and Facchin,A.},
+	editor={ },
+	year={2016},
+	title={CALIBRATION AND STABILITY ANALYSIS OF THE VLP-16 LASER SCANNER},
+	publisher={Copernicus GmbH},
+	address={Gottingen},
+	volume={XL-3/W4},
+	pages={55-60},
+}
+
+@article {Glennie:2012:0099-1112:339,
+	title = "Calibration and Kinematic Analysis of the Velodyne HDL-64E S2 Lidar Sensor",
+	journal = "Photogrammetric Engineering & Remote Sensing",
+	year = "2012",
+	volume = "78",
+	number = "4",
+	pages = "339-347",
+	itemtype = "ARTICLE",
+	author = "Glennie, Craig",
+
 }
 
 @incollection{NIPS2012_4824,
@@ -307,7 +401,6 @@ editor = {F. Pereira and C. J. C. Burges and L. Bottou and K. Q. Weinberger},
 pages = {1097--1105},
 year = {2012},
 publisher = {Curran Associates, Inc.},
-url = {http://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convolutional-neural-networks.pdf}
 }
 
 @book{machine_learning,
@@ -334,6 +427,30 @@ url = {http://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convol
 	pages="818--833",
 
 }
+
+@thesis{tangstad,
+	author = {Tangstad, Espen Johansen},
+	title = {Visual Detection of Maritime Vessels},
+	type = {Master Thesis},
+	institution = {Norwegian University of Science and Technology},
+	date = {June 2017},
+}
+
+@InProceedings{Girshick_2015_ICCV,
+	author = {Girshick, Ross},
+	title = {Fast R-CNN},
+	booktitle = {The IEEE International Conference on Computer Vision (ICCV)},
+	month = {December},
+	year = {2015}
+}
+
+@article{jia2014caffe,
+	Author = {Jia, Yangqing and Shelhamer, Evan and Donahue, Jeff and Karayev, Sergey and Long, Jonathan and Girshick, Ross and Guadarrama, Sergio and Darrell, Trevor},
+	Journal = {arXiv preprint arXiv:1408.5093},
+	Title = {Caffe: Convolutional Architecture for Fast Feature Embedding},
+	Year = {2014}
+}
+
 @article{dropout,
 	author    = {Geoffrey E. Hinton and
 	Nitish Srivastava and
@@ -350,7 +467,52 @@ url = {http://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convol
 	timestamp = {Wed, 07 Jun 2017 14:40:12 +0200},
 	biburl    = {http://dblp.org/rec/bib/journals/corr/abs-1207-0580},
 	bibsource = {dblp computer science bibliography, http://dblp.org}
-}}
+}
+
+@article {ROB:ROB20367,
+	author = {Elkins, Les and Sellers, Drew and Monach, W. Reynolds},
+	title = {The Autonomous Maritime Navigation (AMN) project: Field tests, autonomous and cooperative behaviors, data fusion, sensors, and vehicles},
+	journal = {Journal of Field Robotics},
+	volume = {27},
+	number = {6},
+	publisher = {Wiley Subscription Services, Inc., A Wiley Company},
+	issn = {1556-4967},
+	url = {http://dx.doi.org/10.1002/rob.20367},
+	doi = {10.1002/rob.20367},
+	pages = {790--818},
+	year = {2010},
+}
+
+@article {ROB:ROB20371,
+	author = {Wolf, Michael T. and Assad, Christopher and Kuwata, Yoshiaki and Howard, Andrew and Aghazarian, Hrand and Zhu, David and Lu, Thomas and Trebi-Ollennu, Ashitey and Huntsberger, Terry},
+	title = {360-degree visual detection and target tracking on an autonomous surface vehicle},
+	journal = {Journal of Field Robotics},
+	volume = {27},
+	number = {6},
+	publisher = {Wiley Subscription Services, Inc., A Wiley Company},
+	issn = {1556-4967},
+	url = {http://dx.doi.org/10.1002/rob.20371},
+	doi = {10.1002/rob.20371},
+	pages = {819--833},
+	year = {2010},
+}
+
+@article {ROB:ROB20380,
+	author = {Huntsberger, Terry and Aghazarian, Hrand and Howard, Andrew and Trotz, David C.},
+	title = {Stereo vision–based navigation for autonomous surface vessels},
+	journal = {Journal of Field Robotics},
+	volume = {28},
+	number = {1},
+	publisher = {Wiley Subscription Services, Inc., A Wiley Company},
+	issn = {1556-4967},
+	url = {http://dx.doi.org/10.1002/rob.20380},
+	doi = {10.1002/rob.20380},
+	pages = {3--18},
+	year = {2011},
+}
+
+
+}
 
 
 %</bibtex>
