--- a/chapter5.tex
+++ b/chapter5.tex
@@ -2,7 +2,6 @@
 
 \chapter{Experiments}
 In order to get data to analyse and evaluate the proposed methodology, a series of experiments was performed using a small boat in the channel near Ravnkloa in Trondheim. The sensors were mounted on a rigid mount, and the boat performed a series of maneuvers in front of the sensors, in order to gather sensor data to be post-processed and analyzed. The data was saved in rosbags during the experiments, to be post-processed in ROS and MATLAB after the data gathering.
-
 The experiments were performed at Ravnkloa in the Nidelven river in Trondheim. This location was chosen due to easy access to the waterfront via a floating dock and access to electrical power outlets for the sensors and computer, courtesy of the Trondheim harbor authorities (Trondheim Havn). Figure \ref{fig:trondheim_sentrum} shows the experimental site in a satellite photo of downtown Trondheim. The circle in figure \ref{fig:trondheim_sentrum} illustrates the area where the boat maneuvers were performed, and the arrow illustrates where the sensors were placed.
 \begin{figure}[H]
 	\centering
@@ -13,13 +12,13 @@ The experiments were performed at Ravnkloa in the Nidelven river in Trondheim. T
 The sensors were mounted on a simple rig custom made for the purpose by the workshop at NTNU ITK. Figure \ref{fig:sensors_ravnkloa} shows the sensors mounted on the rig, and the placement of the rig at the end of the floating dock at Ravnkloa.
 \begin{figure}[H]
 	\centering
-	\begin{subfigure}{.5\textwidth}
+	\begin{subfigure}[t]{.5\textwidth}
 		\centering
 		\includegraphics[width=.8\linewidth]{fig/sensor_rig.jpg}
 		\caption{The sensor rig, with (from the top) GNSS antenna, lidar, camera and IMU installed.}
 		\label{fig:sub_sensorrig}
 	\end{subfigure}%
-	\begin{subfigure}{.5\textwidth}
+	\begin{subfigure}[t]{.5\textwidth}
 		\centering
 		\includegraphics[width=.8\linewidth]{fig/sensors_ravnkloa.jpg}
 		\caption{The sensor placement at Ravnkloa.}
@@ -28,11 +27,11 @@ The sensors were mounted on a simple rig custom made for the purpose by the work
 	\caption{The sensor rig, and its placement at the floating dock at Ravnkloa.}
 	\label{fig:sensors_ravnkloa}
 \end{figure}
-The target boat used in the experiments is a 5.1816 meters (17 imperial feet) long  leisure craft, owned by two PhD students at NTNU.
+The target boat used in the experiments is a 5.18 meters (17 imperial feet) long  leisure craft, owned by two PhD students at NTNU.
 The boat is shown in figure \ref{fig:boat} (the blue boat). The relative small size of the boat makes it a good test target for the proposed system, as detection of small leisure crafts will be important from a safety standpoint when an autonomous vessel is maneuvering in confined environments and close to shore, where such crafts are typically found.
 \begin{figure}
 	\centering
-	\includegraphics[width=.8\linewidth]{fig/experiment_boat.jpg}
+	\includegraphics[width=.5\linewidth]{fig/experiment_boat.jpg}
 	\caption{The boat used as a target in the experiments.}
 	\label{fig:boat}
 \end{figure}
@@ -54,5 +53,5 @@ The maneuvers, with reference to the indices in figure \ref{fig:experiments}, we
 	\item Boat crossing in front of sensors, passing at a distance of 45 to 65 meters. Speed approximately 1 meter/second.
 	\item Boat driving in circles in front of sensors, with a radius of approximately 10 meters, centered at a distance of 25 meters from the sensors. This provides a full 360$\degree$ view of the boat.
 \end{enumerate}
-The increased speed in experiment 6 was an attempt to generate wakes, in order to analyse the effects of wakes in the lidar data, as well as testing how detection in images compare to detections in the lidar data for a faster moving target. The imposed speed limit on the Nidelven river is 5 knots, or 2.57 meters/second, so this pass was close to the legal speed limit on the river. For all experiments, lidar data was stored as a point cloud with a update frequency of 10 Hz, images was stored at a frame rate of 25 Hz, sensor rig GNSS position was stored at a frequency of 4 Hz, and target GNSS position, speed over ground and course over ground for the boat was stored at a frequency of 1 Hz. The GNSS position, speed and course over ground for the target was however not stored successfully, due to unknown errors. The system for gathering the data streamed via a mobile phone was tested beforehand, but it has become apparent that this testing was not sufficient. Since no positional data was produced for the target boat, no position ground truth for the experiments was generated.
+The increased speed in experiment 6 was an attempt to generate wakes, in order to analyse the effects of wakes in the lidar data, as well as testing how detection in images compare to detections in the lidar data for a faster moving target. The imposed speed limit on the Nidelven river is 5 knots, or 2.57 meters/second, so this pass was close to the legal speed limit on the river. For all experiments, lidar data was stored as a point cloud with a update frequency of 10 Hz, while images was stored at a frame rate of 25 Hz.
 \cleardoublepage
