--- a/chapter6.tex
+++ b/chapter6.tex
@@ -1,7 +1,7 @@
 
-\chapter{Analysis}
+\chapter{Results}
 In this chapter, the data generated from the experiments presented in the previous chapter are analyzed. The preprocessing methods used on the data is discussed, the metrics used in evaluating the correspondence between image detections and lidar data are introduced, and the results from each experiment are presented.
-\section{Preprocessing}
+\section{Post-processing}
 In order to associate boat detections in the images to world coordinates, the inverse calibration matrix from equation \ref{eq:calibr} using the values found for the matrix $\mathcal{K}$ in section \ref{section:matlab_calibration} was multiplied with the pixel coordinates of the center point of the bounding boxes found by the faster R-CNN implementation. This associates the pixel coordinates with the normalized image plane presented in figure \ref{fig:image_coordinates} in section \ref{section:camera_coordinates}, giving a direction to the center of the bounding box valid up to a scale factor. Due to the image data being in 2D coordinates, one is only able to associate a detection in an image with a direction, or ray, in 3D space. This ray was subsequently transformed from the camera frame, denoted $c$, to the lidar frame of reference, denoted $l$, using the rotation matrix
 \begin{equation}
 \mathcal{R}_c^l=\begin{bmatrix}
@@ -33,13 +33,33 @@ The location used in the experiments gave many returns in the lidar point cloud 
 	\caption{The lidar point cloud including surroundings at Ravnkloa, projected down to the xy-plane.}
 	\label{fig:ravnkloa_pointcloud}
 \end{figure}
-Since, unfortunately, no position ground truth was produced during the experiments, it was decided to use the returns from the boat in the lidar data as a ground truth, when comparing detections from faster R-CNN with the lidar data. In order to achieve this, all unwanted returns were filtered using a "pass through" filter removing all points which lies outside a specified rectangular region in the xy-plane, keeping only the returns from the boat. The point cloud was also reduced to two dimensions by projecting all points down to the plane $z=0$, for simplicity. In addition, the point cloud returns were limited to only those lying in the cameras field of view.
+The returns from the boat in the lidar data was compared with detections from the Faster R-CNN network with the lidar data. In order to remove all returns from the lidar that were known to originate from the surroundings were removed, using a "pass through" filter removing all points which lies outside a specified rectangular region in the xy-plane, keeping only the returns from the designated testing area. The point cloud was also reduced to two dimensions by projecting all points down to the plane $z=0$. In addition, the point cloud returns were limited in post-processing to only those lying in the cameras field of view.
+Once the point cloud was reduced to two dimensions, and all returns originating from the surroundings were removed, k-Means clustering (with k=1) was used to find the centroid of the points returned by the boat.
+An overview of the post-processing pipeline is given in figure \ref{fig:post_pipeline}.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=.6\linewidth]{fig/post-processing-pipeline.png}
+	\caption{The data post-processing pipeline.}
+	\label{fig:post_pipeline}
+\end{figure}
+An example of a image detection associated with the point cloud cluster center is shown in figure \ref{fig:sub_proj_ex1}. The line from the origin to the cluster center is the projection of the bounding box centroid of the detected boat in the image. The corresponding image generating the detection is shown in figure \ref{fig:sub_proj_ex2}.
+\begin{figure}[H]
+		\centering
+		\includegraphics[width=\linewidth]{fig/proj_example.png}
+		\caption{Point cloud cluster, with image detection drawn in.}
+		\label{fig:sub_proj_ex1}
+\end{figure}%
+\begin{figure}[H]
+		\centering
+		\includegraphics[width=\linewidth]{fig/proj_example_im.png}
+		\caption{Corresponding image from the camera, with bounding boxes corresponding to detected boats overlaid.}
+		\label{fig:sub_proj_ex2}
+\end{figure}
 
-Once the point cloud was reduced to two dimensions, and all returns not belonging to the target boat was removed, k-Means clustering (with k=1) was used to find the centroid of the points returned by the boat.
 \section{Metrics}
-Faster R-CNN gives the bounding boxes for its detections, along with the score for the detection, indicating the "confidence" in the classification. The threshold for the score was set to 0.6, where 1.0 indicates absolute certainty (from the detectors perspective) and 0 indicates zero confidence. The 0.6 threshold was the default set in the faster R-CNN implementation from the Github repository. The detection threshold has not been analyzed with particular attention in this project, due to limited time, so the default threshold has been kept as-is.
+Faster R-CNN gives the bounding boxes for its detections, along with the score for the detection, indicating the "confidence" in the classification. The threshold for the score was set to 0.6, where 1.0 indicates absolute certainty (from the detectors perspective) and 0 indicates zero confidence. The 0.6 threshold was the default set in the faster R-CNN implementation from the Github repository. The detection threshold has not been analyzed with particular attention in this project.
 
-As a metric in determining whether or not a detection from the convolutional net corresponds with the boat, the minimum distance between the ray projected by the centroid of the bounding box and the centroid of the point cloud cluster corresponding to the boat was used. This distance was set to 2.5 meters, which is approximately half the length of the boat used in the experiments. This value was heuristically determined through experimentation, and was chosen as a compromise between the target boat being detected versus boats in the background counting as a detection of the target boat. Due to the geometry of the boat, for some maneuvers the majority of the returns found by the lidar come from the front part of the boat, while the detections in the image are more centered on the projection of the boat into the image plane. The 2.5 meters distance also allow for some time difference between the images and the point cloud, as the data is not time stamped at capture time, but at arrival time in the computer, not accounting for intermediary processing and transmission delay. The images corresponding to a particular point cloud were found by searching through the image set and selecting the image with the temporally closest time stamp, since the time offset between the lidar and the camera is unknown. Lastly, the transformation between the camera frame and the lidar frame is hand-measured and assumes that the camera z-axis is perfectly aligned with the lidar x-axis, not taking into account misalignments. The minimum distance of 2.5 meters allows for some leeway in the alignment of the sensors. In order to avoid multiple detections in cases where the target boat pass in front of a boat in the background, only the detection closest to the point cloud cluster center is considered. For each experiment, the total number of image detections corresponding to a point cloud are calculated. The accumulated point cloud cluster centers are plotted as a track for each experiment, and color coded to indicate if there is a detection in a image corresponding to that particular point cloud cluster center. The distance between the center of the bounding box and the cluster center is plotted for the entire recording.
+As a metric in determining whether or not a detection from the convolutional net corresponds with the boat, the minimum distance between the ray projected by the centroid of the bounding box and the centroid of the point cloud cluster corresponding to the boat was used. This distance was set to 2.5 meters, which is approximately half the length of the boat used in the experiments. This value was heuristically determined through experimentation, and was chosen as a compromise between the target boat being detected versus boats in the background counting as a detection of the target boat. Due to the geometry of the boat, for some maneuvers the majority of the returns found by the lidar come from the front part of the boat, while the detections in the image are more centered on the projection of the boat into the image plane. The 2.5 meters distance also allow for some time difference between the images and the point cloud, as the data is not time stamped at capture time, but at arrival time in the computer, not accounting for intermediary processing and transmission delay. The images corresponding to a particular point cloud were found by searching through the image set and selecting the image with the temporally closest time stamp, since the time offset between the lidar and the camera is unknown. Lastly, the transformation between the camera frame and the lidar frame is hand-measured and assumes that the camera z-axis is perfectly aligned with the lidar x-axis, not taking into account misalignments. The minimum distance of 2.5 meters allows for some leeway in the alignment of the sensors. In order to avoid multiple detections in cases where the target boat pass in front of a boat in the background, only the detection closest to the point cloud cluster center is considered. For each experiment, the total number of image detections corresponding to a point cloud are calculated. The accumulated point cloud cluster centers are plotted as a track for each experiment, and color coded to indicate if there is a detection in a image corresponding to that particular point cloud cluster center.
 \section{Experimental Results}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Experiment 1}
@@ -87,14 +107,7 @@ Looking at figure \ref{fig:ex1_50m}, it's hard to determine an exact reason for 
 	\caption{Missed detection in experiment 1.}
 	\label{fig:ex1_50m}
 \end{figure}
-As figure \ref{fig:ex1_track} shows, once the vessel was within 40 meters, every single point cloud had a corresponding detection of the vessel. Figure \ref{fig:ex1_pc_dist} shows the calculated distance between the point cloud cluster and the ray projected from the center of the bounding box around the boat in the corresponding image.
-\begin{figure}[H]
-	\centering
-	\includegraphics[width=.7\linewidth]{fig/exp_1_dist_pr_pc.eps}
-	\caption{Distance between bounding box center and point cloud cluster center throughout experiment 1.}
-	\label{fig:ex1_pc_dist}
-\end{figure}
-The total number of point clouds, total number of detections and the fraction of boat detections in images over the total number of point clouds for experiment 1 is shown in table \ref{tab:exp1}.
+As figure \ref{fig:ex1_track} shows, once the vessel was within 40 meters, every single point cloud had a corresponding detection of the vessel. The total number of point clouds, total number of detections and the fraction of boat detections in images over the total number of point clouds for experiment 1 is shown in table \ref{tab:exp1}.
 \begin{table}[H]
 	\centering
 	\begin{tabularx}{.7\linewidth}{L c}
@@ -111,20 +124,14 @@ The total number of point clouds, total number of detections and the fraction of
 \end{table}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Experiment 2}
-Experiment 2 was performed by the vessel approaching the sensor location from an angle, see figure \ref{fig:experiments}. The track generated by the point cloud cluster centers are shown in figure \ref{fig:ex2_track}. The calculated distance between the bounding box centers and the cluster center is shown in figure \ref{fig:ex2_pc_dist}.
+Experiment 2 was performed by the vessel approaching the sensor location from an angle, see figure \ref{fig:experiments}. The track generated by the point cloud cluster centers are shown in figure \ref{fig:ex2_track}.
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=.8\linewidth]{fig/exp_2_track.eps}
 	\caption{Track generated by point cloud cluster center in experiment 2.}
 	\label{fig:ex2_track}
 \end{figure}
-\begin{figure}[H]
-	\centering
-	\includegraphics[width=.7\linewidth]{fig/exp_2_dist_pr_pc.eps}
-	\caption{Distance between bounding box center and point cloud cluster center throughout experiment 2.}
-	\label{fig:ex2_pc_dist}
-\end{figure}
-As seen in figure \ref{fig:ex2_track}, there is an interval around $x=20$ meters where the image detections dissapear. Figure \ref{fig:sub_ex2_issue} shows the reason for this, as a ship in the background is influencing the detection of the target. In figure \ref{fig:sub_ex2_issue2}, the target vessel has moved enough for the two boats to be detected separately. This influence can also be seen in figure \ref{fig:ex2_pc_dist}, which shows the calculated distance between the cluster center in the point cloud and the projected ray from the center of the bounding box. The background boat influence the center of the bounding box before and after the detections disappear.
+As seen in figure \ref{fig:ex2_track}, there is an interval around $x=20$ meters where the image detections dissapear. Figure \ref{fig:sub_ex2_issue} shows the reason for this, as a ship in the background is influencing the detection of the target. In figure \ref{fig:sub_ex2_issue2}, the target vessel has moved enough for the two boats to be detected separately.
 \begin{figure}[H]
 	\centering
 	\begin{subfigure}[t]{.5\linewidth}
@@ -183,13 +190,6 @@ Experiment 3 was performed by the boat passing across of the sensors, at a dista
 	\caption{Background confusing the detection of the target in the image in experiment 3.}
 	\label{fig:issues_ex3}
 \end{figure}
-The calculated distance between the point cloud cluster center and the corresponding image bounding box is shown in figure \ref{fig:ex3_pc_dist}.
-\begin{figure}[H]
-	\centering
-	\includegraphics[width=.7\linewidth]{fig/exp_3_dist_pr_pc.eps}
-	\caption{Distance between bounding box center and point cloud cluster center throughout experiment 3.}
-	\label{fig:ex3_pc_dist}
-\end{figure}
 The total number of point clouds, total number of detections and the fraction of boat detections in images over the total number of point clouds for experiment 3 is shown in table \ref{tab:exp3}.
 \begin{table}[H]
 	\centering
@@ -207,18 +207,12 @@ The total number of point clouds, total number of detections and the fraction of
 \end{table}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Experiment 4}
-Experiment 4 was performed by the boat passing across the sensor setup, this time at a distance of approximately 30 to 40 meters in the $x$-direction. Figure \ref{fig:ex4_track} shows the track generated by the point cloud cluster centers, and figure \ref{fig:ex4_pc_dist} shows the calculated distance between the point cloud cluster center and the corresponding image bounding box.
+Experiment 4 was performed by the boat passing across the sensor setup, this time at a distance of approximately 30 to 40 meters in the $x$-direction. Figure \ref{fig:ex4_track} shows the track generated by the point cloud cluster centers.
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=.8\linewidth]{fig/exp_4_track.eps}
 	\caption{Track generated by point cloud cluster center in experiment 4.}
 	\label{fig:ex4_track}
-\end{figure}
-\begin{figure}[H]
-	\centering
-	\includegraphics[width=.7\linewidth]{fig/exp_4_dist_pr_pc.eps}
-	\caption{Distance between bounding box center and point cloud cluster center throughout experiment 4.}
-	\label{fig:ex4_pc_dist}
 \end{figure}
 Again, we see from figure \ref{fig:ex4_track} that there are certain parts of the track where the image detections suffer. Figure \ref{fig:issues_ex4} shows that there are boats in the background of the image at this part of the track. Referring to figure \ref{fig:sub_ex4_issue} and comparing with figure \ref{fig:ex4_track}, we see that for all parts of the track where image detections are missing, there are boats in the background of the image.
 \begin{figure}[H]
@@ -255,18 +249,12 @@ The total number of point clouds, total number of detections and the fraction of
 \end{table}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Experiment 5}
-In experiment 5, the boat was passing across the sensor setup at a distance of approximately 45 to 30 meters in the $x$-direction, this time with a speed of approximately 2.5 meters/second. As seen in figure \ref{fig:ex5_track}, there are fewer image detections in this experiment than for the others. Figure \ref{fig:ex5_pc_dist} shows the calculated distance between the image detection bounding box projections and the point cloud cluster centers.
+In experiment 5, the boat was passing across the sensor setup at a distance of approximately 45 to 30 meters in the $x$-direction, this time with a speed of approximately 2.5 meters/second. As seen in figure \ref{fig:ex5_track}, this experiment generated few image detections, compared to the previous experiments.
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=.8\linewidth]{fig/exp_5_track.eps}
 	\caption{Track generated by point cloud cluster center in experiment 5.}
 	\label{fig:ex5_track}
-\end{figure}
-\begin{figure}[H]
-	\centering
-	\includegraphics[width=.8\linewidth]{fig/exp_5_dist_pr_pc.eps}
-	\caption{Distance between bounding box center and point cloud cluster center throughout experiment 5.}
-	\label{fig:ex5_pc_dist}
 \end{figure}
 Figure \ref{fig:issues_ex5} shows an image along with the corresponding point cloud for a case where no boat was detected during experiment 5. As seen in figure \ref{fig:sub_ex5_issue}, there are no boats detected in the background around the target boat in this case. 
 \begin{figure}[H]
@@ -303,18 +291,12 @@ The total number of point clouds, total number of detections and the fraction of
 \end{table}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Experiment 6}
-In experiment 6, the boat was passing across the sensor setup at a distance between approximately 45 to 65 meters in the $x$-direction. Figure \ref{fig:ex6_track} shows the recorded track for this experiment, and the calculated distance between the image detection bounding box projections and the point cloud cluster centers are displayed in figure \ref{fig:ex6_pc_dist}.  
+In experiment 6, the boat was passing across the sensor setup at a distance between approximately 45 to 65 meters in the $x$-direction. Figure \ref{fig:ex6_track} shows the recorded track for this experiment.  
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=.8\linewidth]{fig/exp_6_track.eps}
 	\caption{Track generated by point cloud cluster center in experiment 6.}
 	\label{fig:ex6_track}
-\end{figure}
-\begin{figure}[H]
-	\centering
-	\includegraphics[width=.7\linewidth]{fig/exp_6_dist_pr_pc.eps}
-	\caption{Distance between bounding box center and point cloud cluster center throughout experiment 6.}
-	\label{fig:ex6_pc_dist}
 \end{figure}
 Figure \ref{fig:issues_ex6} shows an example of an image where the target was not detected in the image, along with the corresponding point cloud. The target can be seen between bounding box number two and three in figure \ref{fig:sub_ex6_issue}, counting from the left.
 \begin{figure}[H]
@@ -351,7 +333,7 @@ The total number of point clouds, total number of detections and the fraction of
 \end{table}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Experiment 7}
-In experiment 7, the boat moved in a circular pattern, as seen in the track in figure \ref{fig:ex7_track}. The start of the track, and the experiment, is the top most data point in figure \ref{fig:ex7_track}, subsequently entering the cicular pattern. The boat completed three full circles during the experiment. As seen in the track in figure \ref{fig:ex7_track}, the missed image detections occur at the same part of the track for each completed circle, at both sides of the circle lying on a ray originating in the origin, as well as at the top of the circle in figure \ref{fig:ex7_track}. The missed image detections at the start of the track is due to the boat not being fully in the field of view of the camera at the start of the recording. The calculated distance between the image detection bounding box projections and the point cloud cluster centers are displayed in figure \ref{fig:ex7_pc_dist}
+In experiment 7, the boat moved in a circular pattern, as seen in the track in figure \ref{fig:ex7_track}. The start of the track, and the experiment, is the top most data point in figure \ref{fig:ex7_track}, subsequently entering the cicular pattern. The boat completed three full circles during the experiment. As seen in the track in figure \ref{fig:ex7_track}, the missed image detections occur at the same part of the track for each completed circle, at both sides of the circle lying on a ray originating in the origin, as well as at the top of the circle in figure \ref{fig:ex7_track}. The missed image detections at the start of the track is due to the boat not being fully in the field of view of the camera at the start of the recording.
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=.8\linewidth]{fig/exp_7_track.eps}
@@ -394,12 +376,6 @@ An example image and corresponding point cloud from the topmost part of the trac
 	\caption{Another example of target not detected in image in experiment 7.}
 	\label{fig:issues_ex7_2}
 \end{figure}
-\begin{figure}[H]
-	\centering
-	\includegraphics[width=.7\linewidth]{fig/exp_7_dist_pr_pc.eps}
-	\caption{Distance between bounding box center and point cloud cluster center throughout experiment 7.}
-	\label{fig:ex7_pc_dist}
-\end{figure}
 The total number of point clouds, total number of detections and the fraction of boat detections in images over the total number of point clouds for experiment 6 is shown in table \ref{tab:exp6}.
 \begin{table}[H]
 	\centering
@@ -415,4 +391,31 @@ The total number of point clouds, total number of detections and the fraction of
 	\caption{Data from experiment 7.}
 	\label{tab:exp7}
 \end{table}
+\subsection{Faster R-CNN Performance}
+The processing performance of the Faster R-CNN network was analyzed for each data set produced in the experiments. The time taken to process the images for an entire experiment was measured, and dividing by the number of images gives an indication on the average throughput of the network for the hardware and software used. The results are presented in table \ref{tab:faster-r-cnn-perf}.
+\begin{table}[H]
+	\centering
+	\begin{tabularx}{.7\linewidth}{L L L L}
+		\toprule
+		Experiment & Number of images & Processing time & Average processing time, single image\\
+		\toprule
+		1 & 2010 & 378.282 seconds & 0.188 seconds\\
+		\midrule
+		2 & 1600 & 244.480 seconds & 0.153 seconds\\
+		\midrule
+		3 & 1638 & 251.597 seconds & 0.154 seconds\\
+		\midrule
+		4 & 1629 & 251.518 seconds & 0.154 seconds\\
+		\midrule
+		5 & 1532 & 231.056 seconds & 0.151 seconds\\
+		\midrule
+		6 & 855 & 130.131 seconds & 0.152 seconds\\
+		\midrule
+		7 & 2830 & 590.621 seconds & 0.209 seconds\\
+		\bottomrule
+	\end{tabularx}
+	\caption{Faster R-CNN throughput.}
+	\label{tab:faster-r-cnn-perf}
+\end{table}
+The total average processing time for a single image, averaging over all experiments, is 0.166 seconds.
 \cleardoublepage
