--- a/docsetup.tex
+++ b/docsetup.tex
@@ -1,5 +1,5 @@
 \usepackage{setspace}
-\usepackage{graphicx}
+\usepackage[final]{graphicx}
 \usepackage{amssymb}
 \usepackage{mathrsfs}
 \usepackage{amsthm}
